kubernetes/environments/prod/apps/keycloak/ingress.yaml
---
# IngressRoute fuer Keycloak (PROD)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.eneg.de`)
      kind: Rule
      services:
        - name: keycloak
          namespace: keycloak
          port: 8080
  tls:
    secretName: keycloak-tls
